<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context="com.pruebas.tabs.pruebatabs.InicioSesion">


    <!-- android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"-->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/eMail"
            android:typeface="normal"
            android:layout_marginTop="220dp"
            android:textColor="#ffffff"
            android:contentDescription="@string/prompt_email"
            android:foregroundTint="#f93131"
            android:foregroundTintMode="screen"
            android:hint="@string/prompt_email"
            android:outlineProvider="background"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:typeface="normal"
            android:layout_marginTop="30dp"
            android:textColor="#ffffff"
            android:contentDescription="@string/prompt_password"
            android:hint="@string/prompt_password" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botonEntrar"
            android:id="@+id/InicioSesionBtn"
            android:background="@color/hintColors"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center_horizontal"
            android:ellipsize="end"
            />
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botonRegistro"
            android:id="@+id/registro"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorAccent"
            android:background="#00000000" />
    </LinearLayout>
</RelativeLayout>
